--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ classifiers = [
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering :: Physics",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/madvirus-ops/facpy"
+"Bug Tracker" = "https://github.com/madvirus-ops/facpy/issues"
+"Documentation" = "https://github.com/madvirus-ops/facpy#readme"
+"Source Code" = "https://github.com/madvirus-ops/facpy"
 requires-python = ">=3.9"
 dependencies = [
     "numpy",
