--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "facpy"
-version = "0.1.1"
+version = "0.1.2"
 description = "Field-Aligned Current Python toolkit for SWARM satellite analysis"
 readme = "README.md"
 authors = [
-  { name = "Edwin Ayabie", email = "edwinayabie@example.com" },
+  { name = "Edwin Ayabie", email = "edwin.beshel@ejust.edu.eg" },
 ]
 license = { file = "LICENSE" }
 classifiers = [
@@ -18,11 +18,6 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
 ]
 
-[project.urls]
-"Homepage" = "https://github.com/madvirus-ops/facpy"
-"Bug Tracker" = "https://github.com/madvirus-ops/facpy/issues"
-"Documentation" = "https://github.com/madvirus-ops/facpy#readme"
-"Source Code" = "https://github.com/madvirus-ops/facpy"
 requires-python = ">=3.9"
 dependencies = [
     "numpy",
@@ -34,7 +29,14 @@ dependencies = [
     "cartopy",
     "matplotlib",
     "scipy",
+    "aacgmv2",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/madvirus-ops/facpy"
+"Bug Tracker" = "https://github.com/madvirus-ops/facpy/issues"
+"Documentation" = "https://github.com/madvirus-ops/facpy#readme"
+"Source Code" = "https://github.com/madvirus-ops/facpy"
 
 [project.optional-dependencies]
 dev = [
